--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -6,20 +6,8 @@
 
 	<script>const isCloud =<%= (htmlWebpackPlugin.options.ENV === "CLOUD") %></script>
 
-	<!--Start of Tawk.to Script-->
-	<script type="text/javascript">
-		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-		const tawkScript = (function () {
-			var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-			s1.async = true;
-			s1.src = 'https://embed.tawk.to/5eb50c81a1bad90e54a2d697/default';
-			s1.charset = 'UTF-8';
-			s1.setAttribute('crossorigin', '*');
-			s0.parentNode.insertBefore(s1, s0);
-		})
-		isCloud && tawkScript();
-	</script>
-	<!--End of Tawk.to Script-->
+	<script
+		type="text/javascript">window.$crisp=[]; window.CRISP_WEBSITE_ID = "87c20f88-062d-46ec-b788-21fa15c2e06f"; isCloud && (function () { d = document; s = d.createElement("script"); s.src = "https://client.crisp.chat/l.js"; s.async = 1; d.getElementsByTagName("head")[0].appendChild(s); })();</script>
 
 	<!-- Hotjar Tracking Code for https://portal.muil.io/ -->
 	<script>
